<resources>
    <string name="app_name">Student Life</string>
    <string name="dev_name">Matko Gabriel</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Parolă</string>
    <string name="prompt_firstname">Nume</string>
    <string name="prompt_secondname">Prenume</string>
    <string name="prompt_age">Vârstă</string>
    <string name="prompt_phone">Telefon</string>
    <string name="your_phone">Numărul tău de telefon</string>
    <string name="your_age">Vârsta ta</string>
    <string name="error_invalid_email">Email invalid</string>
    <string name="error_invalid_password">Parola este prea scurtă</string>
    <string name="error_incorrect_password">Parola este incorectă</string>
    <string name="error_field_required">Câmp necesar</string>
    <string name="error_need_permissions">Nu pot continua fără permisiuni</string>
    <string name="error_pass_not_found">Introdu o parolă</string>
    <string name="error_bad_data">Email-ul si parola nu au voie sa fie identice</string>
    <string name="error_bad_name_short">Numele este obligatoriu</string>
    <string name="error_bad_secName_short">Prenumele este obligatoriu</string>
    <string name="error_bad_name">Numele este prea scurt</string>
    <string name="error_bad_secName">Prenumele este prea scurt</string>
    <string name="error_bad_age_short">Vârsta este obligatorie</string>
    <string name="error_bad_age">Vârsta este prea mică</string>
    <string name="error_network_connection">Porneste conexiunea de date si redeschide aplicatia</string>
    <string name="error_no_network_connection">Nu ai acces la internet</string>
    <string name="error_no_image_added">Nu ai adăugat o imagine nouă</string>
    <string name="error_unknown">A apărut o eroare. Verifică conexiunea la internet si reporneste aplicația.</string>
    <string name="error_no_image">Trebuie să adaugi o imagine.</string>
    <string name="error_bad_phone">Utilizatorul nu a adăugat un număr de telefon sau acesta este incorect</string>
    <string name="action_sign_up"><u>Nu ai cont? Înregistrează-te!</u></string>
    <string name="action_sign_up_firebase">Inregistrează-te</string>
    <string name="action_sign_in">Intră în cont</string>
    <string name="auth_successful">Inregistrare reușită!</string>
    <string name="login_successful">Conectare reușită!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="navigation_drawer_open">Deschide meniul de navigare</string>
    <string name="navigation_drawer_close">Inchide meniul de navigare</string>
    <string name="nav_action_home">Acasă</string>
    <string name="nav_action_search_rent">Rent-zone</string>
    <string name="nav_action_add_rent">Adaugă anunț chirie</string>
    <string name="nav_action_search_food">Food-zone</string>
    <string name="nav_action_add_food">Alertă masă ieftină</string>
    <string name="nav_item_about">Despre</string>
    <string name="nav_item_contact">Contact</string>
    <string name="nav_item_faq">FAQ</string>
    <string name="nav_item_logout">Ieșire</string>
    <string name="rent_added_success">Anunț adăugat cu succes</string>
    <string name="food_added_success">Ofertă adăugată cu succes</string>
    <string name="image_added_success">Imaginea a fost salvată</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fav_added">Adăugat la favorite!</string>
    <string name="fav_error">Nu s-a putut adăuga la favorite. Încearcă mai târziu!</string>
    <string name="frag_contact_name">Dezvoltator</string>
    <string name="frag_contact_email">Email</string>
    <string name="frag_contact_email_val">ytgabi98@gmail.com</string>
    <string name="frag_contact_site">Site</string>
    <string name="frag_contact_site_url">https://plus.google.com/+GabiMatkoRO</string>
    <string name="frag_contact_site_val">Google+</string>
    <string name="frag_contact_gplay">Google Play</string>
    <string name="frag_contact_gplay_url">Minimal ART</string>
    <string name="food_alert_title">Titlu</string>
    <string name="food_alert_desc">Descriere</string>
    <string name="food_alert_price">Preț</string>
    <string name="food_alert_location">Restaurant</string>
    <string name="food_alert_btn_img">Adaugă imagine</string>
    <string name="food_alert_checkbox">Abonament/ofertă pentru studenți</string>
    <string name="food_alert_post_alert">Postează oferta</string>
    <string name="add_rent_title">Titlu</string>
    <string name="add_rent_rooms">Camere</string>
    <string name="add_rent_price">Preț</string>
    <string name="add_rent_location">Locație</string>
    <string name="add_rent_description">Descriere</string>
    <string name="add_rent_img">Adaugă imagine</string>
    <string name="add_rent_discount">Discount pentru studenți</string>
    <string name="add_rent_post">Postează anunț</string>
    <string name="error_title_too_short">Titlul este prea scurt</string>
    <string name="error_rooms_too_big">Numărul de camere este prea mare</string>
    <string name="error_loc_short">Locație prea scurtă</string>
    <string name="error_desc_short">Descriere prea scurtă</string>
    <string name="frag_home_fav_rents">Anunțuri favorite</string>
    <string name="frag_home_fav_foods">Mâncăruri favorite</string>
    <string name="frag_about_app">Despre aplicație</string>
    <string name="frag_about_app_desc">\t\t\tStudent Life este o aplicație menită să ajute studenții care vin la studiu în orașul Baia Mare,
    oferindu-le ocazia de a-și afla cu ușuritate un loc unde să stea de-alungul cursurilor și de a alege din multitudinea de oferte de masă
    în momentele în care au nevoie de o masă caldă și nu au timp să gătească sau pur și simplu vor să încerce lucruri noi.</string>
    <string name="frag_about_dev">Dezvoltator</string>
    <string name="frag_about_dev_desc">\t\t\tMatko Gabriel, dezvoltatorul acestei aplicații, este student în clasa a 12-a la Colegiul Național
    Gheorghe Șincai din Baia Mare, profil intensiv informatică. Programarea este unul dintre lucrurile pe care le face cu plăcere, dezvoltând această aplicație fără să aștepte
    vreo răsplată, ci doar din simplul fapt că îi place să descopere și să învețe lucruri noi.</string>
    <string name="frag_about_version">Versiune aplicație</string>
    <string name="frag_about_app_version">1.3b</string>
    <string name="licenses">Licențe Open-Source</string>
    <string name="frag_about_material_ripple_license">Material Ripple Layout</string>
    <string name="frag_about_material_ripple_license_txt">
        \t\tCopyright (&#169;) 2015 Balys Valentukevicius\n\n
\tLicensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at\n\n\t\t\thttp://www.apache.org/licenses/LICENSE-2.0\n\n

\tUnless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
    </string>
    <string name="frag_about_circleimage">Circle Image View</string>
    <string name="frag_about_circleimage_license_txt">
        \t\tCopyright (&#169;) 2014 - 2017 Henning Dodenhof\n\n
\tLicensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at\n\n\t\t\thttp://www.apache.org/licenses/LICENSE-2.0\n\n

\tUnless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
    </string>
    <string name="frag_search_rent_hint">Caută...</string>
    <string name="frag_about_license_student_life">Student Life</string>
    <string name="license_student_life">
        \t\tCopyright (&#169;) 2017 Gabi M.\n\n
\tLicensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at\n\n\t\t\thttp://www.apache.org/licenses/LICENSE-2.0\n\n

\tUnless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
    </string>
    <string name="frag_about_floatingsearchview">Floating SearchView</string>
    <string name="frag_about_floatingsearchview_license_txt">
        \t\tCopyright (&#169;) 2015 Ari C.\n\n
\tLicensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at\n\n\t\t\thttp://www.apache.org/licenses/LICENSE-2.0\n\n

\tUnless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
    </string>
    <string name="frag_about_acra">ACRA</string>
    <string name="frag_about_acra_license_txt">
        \t\tACRA is a library enabling Android Application to automatically post their
        crash reports to a report server. It is targeted to android applications developers
        to help them get data from their applications when they crash or behave erroneously.

        \n\n\t\tMore on GITHUB page :\n
        \t\t\thttps://github.com/ACRA/acra
    </string>
    <string name="choose_browser">Alege rowserul</string>
    <string name="open_rent_description">Descriere: %1$s</string>
    <string name="open_rent_title">Titlu: %1$s</string>
    <string name="open_rent_price">Preț: %1$s lei / lună</string>
    <string name="open_rent_rooms">Număr camere: %1$s</string>
    <string name="open_rent_location">Locație: %1$s</string>
    <string name="open_rent_seller">Acest anunț a fost postat de către utilizatorul: %1$s</string>
    <string name="open_rent_discount_checked">Acest vânzător OFERĂ un discount dacă ești student!</string>
    <string name="open_rent_discount_unchecked">Acest vânzător NU OFERĂ un discount dacă ești student!</string>
    <string name="open_rent_email">E-mail</string>
    <string name="open_rent_phone">Telefon</string>
    <string name="open_food_price">Preț: %1$s lei</string>
    <string name="open_food_seller">Această alertă a fost postată de către utilizatorul: %1$s</string>
    <string name="open_food_discount_checked">La acestă ofertă SE OFERĂ reducere pentru studenți!</string>
    <string name="open_food_discount_unchecked">La acestă ofertă NU SE OFERĂ reducere pentru studenți!</string>
    <string name="add_rent_bigtitle">Adaugă chirie</string>
    <string name="add_food_bigtitle">Adaugă alertă</string>
    <string name="menu_profile">Profilul tău</string>
    <string name="menu_settings">Setări</string>
    <string name="others">Altele</string>
    <string name="email_intent">Trimite e-mail...</string>
    <string name="settings_title_color">Schimbă culoarea temei</string>
    <string name="settings_title_color_summary">Alege o temă care să fie pe placul tău</string>
    <string name="settings_title_color_accent">Schimbă culoarea de accent</string>
    <string name="settings_title_color_accent_summary">Alege o culoare de accent care să fie pe placul tău</string>
    <string name="myprofile_title">Profilul tău</string>
    <string name="myprofile_pictitle">Poza de profil</string>
</resources>