<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_nav_home"
            android:title="@string/nav_action_home"/>
        <item
            android:id="@+id/nav_search_rent"
            android:icon="@drawable/ic_search"
            android:title="@string/nav_action_search_rent"/>
        <item
            android:id="@+id/nav_search_food"
            android:icon="@drawable/ic_eating"
            android:title="@string/nav_action_search_food"/>
        <item
            android:id="@+id/nav_add_rent"
            android:icon="@drawable/ic_rent"
            android:title="@string/nav_action_add_rent" />
        <item
            android:id="@+id/nav_add_food"
            android:icon="@drawable/ic_alert"
            android:title="@string/nav_action_add_food"/>
        <item
            android:id="@+id/nav_my_profile"
            android:icon="@drawable/ic_account"
            android:title="@string/menu_profile"/>
    </group>

    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/menu_settings"/>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_assistant"
                android:title="@string/nav_item_about" />
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_send"
                android:title="@string/nav_item_contact" />
            <item
                android:id="@+id/nav_faq"
                android:icon="@drawable/ic_info"
                android:title="@string/nav_item_faq"/>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit"
                android:title="@string/nav_item_logout"/>
        </menu>
    </item>

</menu>
