<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.minimalart.studentlife.fragments.navdrawer.AboutFragment">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="@dimen/standard_padding"
                android:src="@drawable/studentlife720"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_padding"
                android:layout_marginBottom="@dimen/standard_padding"
                android:text="@string/app_name"
                android:textSize="30sp" />

            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/card_about_app"
                card:cardElevation="@dimen/card_elevation"
                card:cardCornerRadius="@dimen/card_radius"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="@dimen/standard_padding"
                android:layout_marginRight="@dimen/standard_padding">

                <com.balysv.materialripple.MaterialRippleLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="@dimen/standard_padding">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_centerVertical="true">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/frag_about_app"
                                android:textSize="30sp"
                                android:id="@+id/card_avout_app_title"
                                android:layout_marginBottom="7dp"
                                android:textColor="?colorAccent"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/frag_about_app_desc"
                                android:layout_marginTop="5dp"
                                android:textSize="18sp"
                                android:id="@+id/card_about_app_desc"
                                android:gravity=""/>

                        </LinearLayout>

                    </RelativeLayout>

                </com.balysv.materialripple.MaterialRippleLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/card_about_dev"
                card:cardElevation="@dimen/card_elevation"
                card:cardCornerRadius="@dimen/card_radius"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="@dimen/standard_padding"
                android:layout_marginRight="@dimen/standard_padding">

                <com.balysv.materialripple.MaterialRippleLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="@dimen/standard_padding">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_centerVertical="true">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/frag_about_dev"
                                android:textSize="30sp"
                                android:id="@+id/card_about_dev_title"
                                android:layout_marginBottom="7dp"
                                android:textColor="?colorAccent"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/frag_about_dev_desc"
                                android:layout_marginTop="5dp"
                                android:textSize="18sp" />

                        </LinearLayout>

                    </RelativeLayout>

                </com.balysv.materialripple.MaterialRippleLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/card_about_appversion"
                card:cardElevation="@dimen/card_elevation"
                card:cardCornerRadius="@dimen/card_radius"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="@dimen/standard_padding"
                android:layout_marginRight="@dimen/standard_padding">

                <com.balysv.materialripple.MaterialRippleLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="@dimen/standard_padding">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_centerVertical="true">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/frag_about_version"
                                android:textSize="30sp"
                                android:id="@+id/card_aboutapp_ver_sion"
                                android:layout_marginBottom="7dp"
                                android:textColor="?colorAccent"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/frag_about_app_version"
                                android:layout_marginTop="5dp"
                                android:textSize="18sp"
                                android:id="@+id/card_about_app_version_vers"/>

                        </LinearLayout>

                    </RelativeLayout>

                </com.balysv.materialripple.MaterialRippleLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/card_about_license"
                card:cardElevation="@dimen/card_elevation"
                card:cardCornerRadius="@dimen/card_radius"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="@dimen/standard_padding"
                android:layout_marginLeft="@dimen/standard_padding"
                android:layout_marginRight="@dimen/standard_padding">

                <com.balysv.materialripple.MaterialRippleLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="@dimen/standard_padding">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_centerVertical="true">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/licenses"
                                android:textSize="30sp"
                                android:layout_marginBottom="7dp"
                                android:textColor="?colorAccent"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/frag_about_license_student_life"
                                android:textSize="24sp"
                                android:textColor="@color/textPrincipal"
                                android:id="@+id/card_about_student_life_lic_title"
                                android:layout_marginBottom="7dp"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/license_student_life"
                                android:layout_marginTop="5dp"
                                android:textSize="18sp"
                                android:id="@+id/card_about_student_life_lic_txt"/>

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="?colorAccent"
                                android:layout_marginTop="12dp">
                            </RelativeLayout>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/frag_about_material_ripple_license"
                                android:layout_marginTop="8dp"
                                android:textSize="24sp"
                                android:textColor="@color/textPrincipal"
                                android:id="@+id/card_about_material_ripple"
                                android:layout_marginBottom="7dp"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/frag_about_material_ripple_license_txt"
                                android:layout_marginTop="5dp"
                                android:textSize="18sp"
                                android:id="@+id/card_about_material_ripple_txt"/>

                            <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="?colorAccent"
                            android:layout_marginTop="12dp">
                            </RelativeLayout>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/frag_about_circleimage"
                                android:layout_marginTop="8dp"
                                android:textColor="@color/textPrincipal"
                                android:textSize="24sp"
                                android:id="@+id/card_about_picasso"
                                android:layout_marginBottom="7dp"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/frag_about_circleimage_license_txt"
                                android:layout_marginTop="5dp"
                                android:textSize="18sp" />

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="?colorAccent"
                                android:layout_marginTop="12dp">

                            </RelativeLayout>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/frag_about_floatingsearchview"
                                android:layout_marginTop="8dp"
                                android:textColor="@color/textPrincipal"
                                android:textSize="24sp"
                                android:id="@+id/card_about_fsv"
                                android:layout_marginBottom="7dp"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/frag_about_floatingsearchview_license_txt"
                                android:layout_marginTop="5dp"
                                android:textSize="18sp" />

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="?colorAccent"
                                android:layout_marginTop="12dp">

                            </RelativeLayout>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/frag_about_acra"
                                android:layout_marginTop="8dp"
                                android:textColor="@color/textPrincipal"
                                android:textSize="24sp"
                                android:id="@+id/card_about_acra"
                                android:layout_marginBottom="7dp"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/frag_about_acra_license_txt"
                                android:layout_marginTop="5dp"
                                android:textSize="18sp" />

                        </LinearLayout>

                    </RelativeLayout>

                </com.balysv.materialripple.MaterialRippleLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</FrameLayout>
